--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -38,3 +38,57 @@
     transform: translateX(200%);
   }
 }
+
+.modal {
+  position: fixed;
+  top: 50%;
+  right: 0; /* Start from the right */
+  transform: translateY(-50%); /* Center vertically */
+  transition: transform 0.5s ease-in-out; /* Smooth transition */
+  width: 300px; /* Set your modal width */
+  background-color: white; /* Background color */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Optional shadow */
+  z-index: 1000; /* Ensure it's on top */
+}
+
+.slide-in {
+  transform: translate(0, -50%); /* Slide in */
+}
+
+.slide-out {
+  transform: translate(100%, -50%); /* Slide out */
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  z-index: 999;
+}
+
+.search-modal {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%) translateY(-100%);
+  transition: transform 0.5s ease; /* Adjusted for slower transition */
+  width: 100%;
+  background-color: white;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+}
+
+.search-slide-in {
+  transform: translate(-50%, 0); /* Slide in from the top */
+}
+
+.search-slide-out {
+  transform: translate(-50%, -100%); /* Slide out to the top */
+}
+
